[B]Version 1.4.7 (Jan 2, 2013)[/B]
- Updated addon.xml to depend on python 2.1.0 (required for Frodo)

[B]Version 1.4.6 (Jan 2, 2013)[/B]
- Streamlined mediastreaming plugin version checking when using the "Watch (Streamed)" context menu item
- Included latest language file updates

[B]Version 1.4.5 (Jan 1, 2013)[/B]
- Updated language files from Transifex

[B]Version 1.4.4 (Dec 4, 2012)[/B]
- Added additional check upon launch to ensure that the xbmc.js is not corrupt (aka someone manually copied from an HTML page versus downloading it correctly)

[B]Version 1.4.3 (Dec 4, 2012)[/B]
- Enhanced dependency version checking logic when the addon is first launched

[B]Version 1.4.2 (Nov 30, 2012)[/B]
- Included additional show level metadata including # of episodes (both total, watched, and unwatched), genre, and most recent aired date

[B]Version 1.4.1 (Nov 26, 2012)[/B]
- Included enhanced xbmc.js that was accidentally not checked in with version 1.4.0
- Included latest language file updates

[B]Version 1.4.0 (Nov 13, 2012)[/B]
- Removed dependency on CommonFunctions (script.module.parsedom) which was previously used to ask what text to search for using the search for recordings/airings
- Enhanced xbmc.js to include a version number to ensure that the latest xbmc.js file is being used as the addon versions up over time

[B]Version 1.3.8 (Nov 8, 2012)[/B]
- Added additional error checking upon launch of the addon to ensure the correct sagex plugins are installed (and if they aren't it will kick you back to the main menu after informing you of the issue)
- Added in initial language translations for German, Slovak, Spanish, Swedish, Lithuanian, and Portuguese (Brazil)

[B]Version 1.3.7 (Nov 1, 2012)[/B]
- Streamlined initial check for the sagex-api-services plugin upon launch of the addon; this should enable loading the addon's main menu much faster
- **Note that this change requires you to copy the updated xbmc.js file to your sagetv\sagex\services folder
