@@ -7,7 +7,7 @@
     <setting id="sage_mac" type="text" label="20006" default="FF:FF:FF:FF:FF:FF"/>
     <setting id="streaming_quality" type="enum" label="20007" values="150|240|440|640|840|1240|1840" default="1840"/>
     <setting type="sep" />
-    <setting id="sage_rec" type="text" label="20004" default="E:\SageTV Recordings\" />
+    <setting id="sage_rec" type="text" label="20004" default="T:\SageTV Recordings\" />
     <setting id="sage_unc" type="folder" label="20005" default="smb://localhost/SageTV Recordings/"/>
     <setting id="sage_rec2" enable="!eq(-1,)" type="text" label="20004" default="" />
     <setting id="sage_unc2" enable="!eq(-2,)" type="folder" label="20005" default=""/>
